added detete to app users w/validation and error checks
