# Vendor-Tracking/swagger.json
@@ -122,6 +122,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Vendors"
+        ],
         "description": "",
         "parameters": [
           {
@@ -229,6 +232,31 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "App Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
